# typos

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
assets/: default.typ
src/: cli.rs  config.rs  convert.rs  defaults.rs  error.rs  font.rs  frontmatter.rs  interactive.rs  main.rs  markdown.rs  output.rs  render.rs  template.rs  watch.rs  world.rs
