[package]
authors = ["LuMiSxh"]
name = "typos"
version = "0.1.0"
description = "Self-contained Markdown to branded PDF converter"
edition = "2024"

[[bin]]
name = "typos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
comrak = { version = "0.29", features = [] }
dialoguer = "0.11"
console = "0.15"
walkdir = "2"
brotli = "6"
mimalloc = { version = "0.1", default-features = false }

# Typst — pin all to same version to avoid incompatibilities
typst = "0.14"
typst-pdf = "0.14"
typst-assets = "0.14"
typst-library = "0.14"
typst-syntax = "0.14"
typst-timing = "0.14"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
