[package]
authors = ["LuMiSxh"]
name = "typos"
version = "0.3.2"
description = "Self-contained Markdown to branded PDF converter"
edition = "2024"
license = "MIT"

[[bin]]
name = "typos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
thiserror = "2"
anyhow = "1"
comrak = "0.52"
dialoguer = "0.12"
console = "0.16"
walkdir = "2"
rayon = "1"
notify = "8"
opener = "0.8"
time = "0.3"
mimalloc = { version = "0.1", default-features = false }

# Typst — pin all to same version to avoid incompatibilities
typst = "0.15"
typst-pdf = "0.15"
typst-assets = { version = "0.15", features = ["fonts"] }
typst-layout = "0.15"
typst-library = "0.15"
typst-syntax = "0.15"
typst-timing = "0.15"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = true
